# yawsnd

./: README.md  meson.build  yawsnd.rules
.github/workflows/: yawsnd-linux.yml
data/sw524/: Capture.txt  Connection.pcapng  ImportData.pcapng  LiveCapture.pcapng  Setup30_80Apply.pcapng  Setup60-110Apply.pcapng  Setup80-130Apply.pcapng  SetupAApply.pcapng  SetupCApply.pcapng  SetupFastApply.pcapng  SetupMaxOffApply.pcapng  SetupMaxOnApply.pcapng  SetupMinOffApply.pcapng  SetupMinOnApply.pcapng  SetupOpen.pcapng  SetupSlowApply.pcapng
src/: main.c  meson.build  yawsw524.c  yawsw524.h
